--- a/index2.html
+++ b/index2.html
@@ -54,6 +54,18 @@
         </div>
 
     </div>
+    <div class="container B">
+        <div class="row">
+            <div id="video-box" class="col-md-7 col-md-offset-1">
+                <h3>Video Title</h3>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="..."></iframe>
+                </div>
+            </div>
+            <div id="vid-suggestion" class="col-md-4">
+            </div>
+        </div>  
+    </div>
 	
 </body>
 </html>
