--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <script src="jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="css/bootstrap.min.css"> 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -15,12 +16,12 @@
             <div class="col-md-2">
                 <img id="image" src="https://www.youtube.com/yt/brand/media/image/YouTube-logo-full_color.png">
             </div>
-            <div class="col-md-4 col-md-offset-1">
-                <input type="text" name="searchbar" value="" placeholder="Search..">
+            <div class="col-md-5 col-md-offset-1">
+                <input class="search-bar" type="text" name="searchbar" value="" placeholder="Search...">
                 <button type="submit">Search</button>
             </div>
-            <div class="col-md-3 col-md-offset-2">
-            <a href="#">Create Account</a> or <a href="#">Sign Up</a>
+            <div class="links col-md-3 col-md-offset-1">
+                <a href="#">Create Account</a> or <a href="#">Sign Up</a>
             </div>
         </div>
         <div class="row">
