--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
             <div class="col-xs-3 col-xs-offset-4">
                 <a href="index.html" title="">Home</a>            
                 <span>|</span>
-                <a href="#" title="">Videos</a> 
+                <a class="active" href="#" title="">Videos</a> 
                 <span>|</span> 
                 <a href="#" title="">Channels</a>
             </div>
@@ -75,7 +75,7 @@
                     </li>
                 </ul>
                 <div class="col-xs-3 col-xs-offset-3">
-                    <div id="views">Views: <span id="view-number">125,450</span>
+                    <div id="views"><span id="view-number">125,450</span> Views
                     </div>
                 </div>
                 <div id="comment-section" class="col-xs-12">
@@ -119,8 +119,7 @@
                     </div>
                     <button type="button" class="btn btn-info" id="subscribebtn">Subscribe</button>
                     <div class="col-xs-12">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                     </div>
                     
                 </div>
