--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
         <div class="row two">
             <div class="col-xs-3 col-xs-offset-4">
-                <a href="#" title="">Home</a>            
+                <a class="active" href="#" title="">Home</a>            
                 <span>|</span>
                 <a href="index2.html" title="">Videos</a> 
                 <span>|</span> 
                 <a href="#" title="">Channels</a>
             </div>
-            <div class="col-xs-4 col-xs-offset-1">
+            <div id="nav-bar" class="col-xs-4 col-xs-offset-1">
                 <a href="#" title="">Subscriptions</a>
                 <span></span>
                 <a href="#" title="">History</a>
@@ -60,11 +60,11 @@
                 <div class="queue-text col-xs-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
             </div>
         </div>
+        <a href="#" data-toggle="modal" data-target="#myModal">
         <div id="ad-window" class="col-xs-3 col-xs-offset-1">
-            <img src="http://www.wevegotthekeys.com/images/key-west-experience.jpg">
+            <img src="http://www.wevegotthekeys.com/images/key-west-experience.jpg"></a>
             <div id="ad-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
             </div>
         </div>
         <div id="gap2" class="col-xs-12"></div>
@@ -81,5 +81,32 @@
         </div>
     </div>
 
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                    <img src="http://www.wevegotthekeys.com/images/key-west-experience.jpg">
+                    <p>&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#47;&#180;&#175;&#47;&#41;&#32;<br/>
+                    &#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#44;&#47;&#175;&#46;&#46;&#47;&#32;&#46;&#46;&#46;&#46;&#46;&#46;&#46;<br/>
+                    &#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#47;&#46;&#46;&#46;&#46;&#47;&#32;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;<br/>
+                    &#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#47;&#180;&#175;&#47;&#39;&#46;&#46;&#46;&#39;&#47;&#180;&#175;&#175;&#96;&#183;&#184;&#32;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;<br/>
+                    &#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#47;&#39;&#47;&#46;&#46;&#46;&#47;&#46;&#46;&#46;&#46;&#47;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#47;&#168;&#175;&#92;&#32;&#46;&#46;&#46;&#46;&#46;&#46;&#46;<br/>
+                    &#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#40;&#39;&#40;&#46;&#46;&#46;&#180;&#46;&#46;&#46;&#180;&#46;&#46;&#46;&#46;&#32;&#175;&#126;&#47;&#39;&#46;&#46;&#46;&#39;&#41;&#32;&#46;&#46;&#46;&#46;&#46;&#46;&#46;<br/>
+                    &#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#92;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#39;&#46;&#46;&#46;&#46;&#46;&#47;&#32;&#46;&#46;&#46;&#46;&#46;<br/>
+                    &#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#39;&#39;&#46;&#46;&#46;&#92;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#32;&#95;&#46;&#183;&#180;&#32;<br/>
+                    &#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#92;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;&#46;<br/>
+                    Bitch, I'm on vacation!
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
