--- a/index2.html
+++ b/index2.html
@@ -46,12 +46,12 @@
     </div>
     <div class="container B">
         <div class="row">
-            <div class="col-xs-7 col-xs-offset-1">
+            <div class="col-xs-8">
                 <h3>Video Title</h3>
             </div>
         </div>
         <div class="row">
-            <div id="video-box" class="col-xs-7 col-xs-offset-1">
+            <div id="video-box" class="col-xs-8">
 
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="..."></iframe>
