--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container A">
         <div class="row">
-            <div class="col-xs-2">
+            <div class="col-xs-2" id="youtube">
                 <img id="image" src="https://www.youtube.com/yt/brand/media/image/YouTube-logo-full_color.png">
             </div>
             <div class="col-xs-5 col-xs-offset-1">
@@ -51,13 +51,13 @@
                     <iframe class="embed-responsive-item" src="..."></iframe>
                 </div>
             </div>
-            <div id="video-queue" class="col-xs-4">
-                <img class="col-xs-4" src="http://a3.mzstatic.com/us/r30/Purple69/v4/b7/12/3c/b7123c9c-1dd4-dbf6-bae4-d64403cef05b/icon75x75.jpeg">
+            <div id="video-queue" class="col-xs-12">
+               <!--  <img class="col-xs-4" src="http://a3.mzstatic.com/us/r30/Purple69/v4/b7/12/3c/b7123c9c-1dd4-dbf6-bae4-d64403cef05b/icon75x75.jpeg">
                 <div class="queue-text col-xs-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                 <img class="col-xs-4" src="http://a3.mzstatic.com/us/r30/Purple69/v4/b7/12/3c/b7123c9c-1dd4-dbf6-bae4-d64403cef05b/icon75x75.jpeg">
                 <div class="queue-text col-xs-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                 <img class="col-xs-4" src="http://a3.mzstatic.com/us/r30/Purple69/v4/b7/12/3c/b7123c9c-1dd4-dbf6-bae4-d64403cef05b/icon75x75.jpeg">
-                <div class="queue-text col-xs-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                <div class="queue-text col-xs-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div> -->
             </div>
         </div>
         <a href="#" data-toggle="modal" data-target="#myModal">
