--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
         </div>
         <div class="row two">
             <div class="col-xs-3 col-xs-offset-4">
-                <a class="active" href="#" title="">Home</a>            
+                <a class="active" href="#" title="home">Home</a>            
                 <span>|</span>
-                <a href="index2.html" title="">Videos</a> 
+                <a href="index2.html" title="videos">Videos</a> 
                 <span>|</span> 
-                <a href="#" title="">Channels</a>
+                <a href="#" title="channels">Channels</a>
             </div>
             <div id="nav-bar" class="col-xs-4 col-xs-offset-1">
-                <a href="#" title="">Subscriptions</a>
+                <a href="#" title="subscriptions">Subscriptions</a>
                 <span></span>
-                <a href="#" title="">History</a>
+                <a href="#" title="history">History</a>
                 <span></span>
-                <a href="#" title="">Upload</a>
+                <a href="#" title="upload">Upload</a>
             </div>
             
         </div>
