--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="container A">
         <div class="row">
-            <div class="col-xs-2">
+            <div id="youtube" class="col-xs-2">
                 <img id="image" src="https://www.youtube.com/yt/brand/media/image/YouTube-logo-full_color.png">
             </div>
             <div class="col-xs-5 col-xs-offset-1">
@@ -26,18 +26,18 @@
         </div>
         <div class="row two">
             <div class="col-xs-3 col-xs-offset-4">
-                <a href="index.html" title="">Home</a>            
+                <a href="index.html" title="home">Home</a>            
                 <span>|</span>
-                <a class="active" href="#" title="">Videos</a> 
+                <a class="active" href="#" title="videos">Videos</a> 
                 <span>|</span> 
-                <a href="#" title="">Channels</a>
+                <a href="#" title="channels">Channels</a>
             </div>
             <div class="col-xs-4 col-xs-offset-1">
-                <a href="#" title="">Subscriptions</a>
+                <a href="#" title="subscriptions">Subscriptions</a>
                 <span></span>
-                <a href="#" title="">History</a>
+                <a href="#" title="history">History</a>
                 <span></span>
-                <a href="#" title="">Upload</a>
+                <a href="#" title="upload">Upload</a>
             </div>
             
 
