--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h4>Featured</h4>
             <div id="video-box" class="col-xs-8">
                 <div class="embed-responsive embed-responsive-4by3">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RGJb2iLvOKE?autoplay=true"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RGJb2iLvOKE?autoplay=false"></iframe>
                 </div>
             </div>
             <div id="video-queue" class="col-xs-4">
