--- a/index2.html
+++ b/index2.html
@@ -54,7 +54,7 @@
             <div id="video-box" class="col-xs-8">
 
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="..."></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RGJb2iLvOKE?autoplay=false"></iframe>
                 </div>
 
                 <ul class="nav nav-pills col-xs-6">
